# survey-dag-extractor

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  CLEANUP_PLAN.md  HANDOFF_INSTRUCTIONS.md  README.md  __init__.py  assembly.py  break_survey.py  compare_dags.py  complete_pipeline.py  config.py  connectivity_test.py  convert_data_dictionary.py  convert_excel.py  dag.json  dag_extract_agents.py  dag_extract_simple.py  dag_extract_staged.py  dag_extract_staged_fixed.py  database_manager.py  debug_db.py  debug_routing_agent.py  edges.py  extract_pdf.py  extract_rich_comprehensive.py  fix_poc_display.py  fix_poc_final.py  hunt_final_node.py  nodes.py  pdf_to_markdown.py  phase3_processor_hardcoded_DELETE.py  predicates.py  process_section_1.py  pyproject.toml  quick_connectivity_check.py  requirements.txt  routing_agent_fixed.py  run_semantic_test.py  (+10 more)
agents/: README.md  agent_config.json  automation_orchestrator.py  content_agent.py  content_one_agent.py  index_safety_pass.py  question_index_agent.py  routing_agent.py  skip_agent.py  stage0_full_index.py  structure_agent.py  test_semantic_mapping.py  variable_agent.py  variable_agent_semantic.py
chunking/: block_detect.py  page_windows.py  smart_slicing.py
config/: dag_config.py  generic_survey_template.json  htops_dag_config.json
core/: dag_validator.py  database_manager.py  realistic_validator.py  schema_exporter.py
data/: HTOPS_2502_Questionnaire_ENGLISH.md  htops_complete_nodes_minimal.json  htops_data_dictionary.json  survey_content_schema.json  survey_dag_schema.json  survey_dag_schema_v1.1--old.json  (+2 more)
(+175 files in other folders)
